# Data-platform

./: .containers-sugar.yaml  .dockerignore  .env.tpl  .gitignore  .makim.yaml  .pre-commit-config.yaml  .pylintrc  .releaserc.json  .sugar.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.contrib/: compose-dev.yaml  compose-prod.yaml  compose.yaml
.contrib/mkdocs/: Dockerfile  requirements.txt
.contrib/mosqlimate/: Dockerfile.backend  Dockerfile.frontend  entrypoint.backend.sh  entrypoint.frontend.sh
.contrib/postgres/: Dockerfile
.contrib/postgres/scripts/: initdb-postgis.sh
.contrib/scripts/: ping_mosqlimate.py
.contrib/templates/: env.tpl  postgresql.conf
.github/workflows/: main.yaml  ping-bot.yaml  release.yaml
backend/: .coveragerc  pyproject.toml
backend/chatbot/: consumers.py  models.py  routing.py  tasks.py
backend/chatbot/migrations/: 0002_chatsession_language_alter_chatsession_session_key.py
backend/chatbot/templatetags/: floating_chat.py
backend/datastore/: api.py  filters.py  models.py  routers.py  schema.py  tasks.py  views.py
backend/datastore/migrations/: 0001_initial.py  0005_sprint202425schema.py  0007_alter_copernicusbrasil_table.py  0009_trigram_extension.py  0010_icd_disease.py  0011_icd_release_date.py  0012_adm0_adm1_adm2_adm3.py  0013_populate_brazil_adms.py  0014_delete_sprint202425.py  0015_contaovos.py  0016_alter_contaovos_latitude_alter_contaovos_longitude.py  0017_vegetationindexmetric.py  0018_episcannersirparams.py
backend/datastore/tests/: test_api.py  test_episcanner_api.py  test_queries_database.py
backend/main/: api.py  models.py  schema.py  tasks.py  throttle.py  urls.py  utils.py  views.py
backend/maps/: api.py  models.py  views.py
backend/mosqlimate/: __init__.py  api.py  asgi.py  celeryapp.py  urls.py  wsgi.py
backend/registry/: admin.py  api.py  apps.py  filters.py  models.py  pagination.py  schema.py  signals.py  tasks.py  urls.py  views.py
backend/users/: adapter.py  adapters.py  api.py  auth.py  jwt.py  models.py  providers.py  schema.py  urls.py  views.py
backend/vis/: api.py  filters.py  models.py  routing.py  schema.py  tasks.py  tests.py  urls.py  utils.py  views.py
conda/: base.yaml
containers/: compose-dev.yaml  compose-prod.yaml  compose.yaml  entrypoint.sh
containers/frontend/: Dockerfile
containers/mkdocs/: Dockerfile  entrypoint.sh  requirements.txt
containers/mosqlimate/: Dockerfile  Dockerfile.backend  Dockerfile.frontend
containers/nginx/: Dockerfile  nginx-certbot.env  nginx.conf
containers/postgres/: Dockerfile
contrib/: compose-dev.yaml  compose-prod.yaml  compose.yaml
contrib/conda/: base.yaml
contrib/mkdocs/: Dockerfile
contrib/mosqlimate/: Dockerfile.backend  Dockerfile.frontend  entrypoint.backend.sh  entrypoint.frontend.sh
contrib/postgres/: Dockerfile  update-postgis.sh
contrib/scripts/: __init__.py  do_dotenv.py  do_psqlconf.py  fetch_who_icd.py  ping_mosqlimate.py
contrib/templates/: .env.tpl  env.tpl  pg_hba.conf  postgresql.conf
docs/notebooks/: Python_GET.ipynb
frontend/: index.html  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  webpack.config.js
frontend/climate-dashboard/: index.html  script.js
frontend/public/: br.geojson
frontend/src/: App.tsx  globals.css  main.tsx  middleware.ts  server.tsx
mkdocs/: .wget-hsts  mkdocs.yml
mkdocs/docs/: index.en.md  index.md  index.pt.md  overview.md  uid-key.en.md  uid-key.md  uid-key.pt.md
src/: manage.py
src/backend/: asgi.py  celeryapp.py  wsgi.py
src/chatbot/: consumers.py  context_processors.py  routing.py  tasks.py  urls.py  views.py
src/datastore/: api.py  apps.py  models.py  routers.py  schema.py  urls.py  views.py  vis_charts.py
src/frontend/: webpack.config.js
src/main/: api.py  models.py  schema.py  urls.py  utils.py  views.py
src/maps/: api.py  layers.py  models.py  urls.py  views.py
src/mosqclimate/: asgi.py  settings.py  urls.py  wsgi.py
src/mosqlimate/: api.py  asgi.py  celeryapp.py  settings.py  urls.py  views.py  wsgi.py
src/registry/: admin.py  api.py  apps.py  models.py  pagination.py  schema.py  signals.py  urls.py  utils.py  validations.py  views.py
src/users/: api.py  auth.py  forms.py  middleware.py  models.py  schema.py  urls.py  views.py
src/vis/: admin.py  api.py  apps.py  filters.py  metadata.py  models.py  schema.py  tasks.py  urls.py  utils.py  views.py
(+667 files in other folders)
