[tool.poetry]
name = "mosqlimate-data"
version = "0.1.0"
description = "TODO"
authors = ["Flávio Codeço Coelho <you@example.com>"]
license = "GNU"
readme = "README.md"
# packages = [{include = "src"}]


[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
django-ninja = "^0.22.2"
django-extensions = "^3.2.1"
dr-scaffold = "^2.1.2"
jinja2 = ">=3.0.3"
psycopg2-binary = "^2.9.6"
django = "^4.2.2"
python-environ = "^0.4.54"
django-allauth = "^0.54.0"
fontawesomefree = "^6.4.0"
websocket-client = "0.49.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
pydantic = "<2.0"
python-dotenv = "<0.22.0"
msgspec = "^0.18.2"
six = "^1.16.0"
django-plotly-dash = "^2.2.2"
pandas = "^2.1.2"
dpd-static-support = "^0.0.5"
channels = "^4.0.0"
daphne = "^4.0.0"
redis = "^5.0.1"
django-redis = "^5.4.0"
channels-redis = "^4.1.0"
matplotlib = "^3.8.1"
geopandas = "^0.14.0"
pyproj = "^3.6.1"
altair = "^5.1.2"
celery = "^5.3.5"
django-celery-beat = "^2.5.0"
ipython = "^8.18.1"


[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.3.2"
black = "^23.3.0"
ruff = "^0.0.272"


[tool.poetry.group.dev.dependencies]
compose-go = "^2.22.0"
containers-sugar = ">=1.8"
makim = "^1.8.1"
pygments = "^2.15.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
notebook = "^7.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
